# broCode

./: .gitignore  .mcp.json  CLAUDE.md  CURRENT_STATE.md  README.md  Skills.md  project-skiss.md  pyproject.toml
.agent/rules/: brocode.md
mcp_server/: pyproject.toml
mcp_server/src/brocode_mcp/: __init__.py  env.py  neo4j_client.py  queries.py  server.py
mcp_server/tests/: conftest.py  test_claim_node.py  test_clear_messages.py  test_get_active_agents.py  test_get_messages.py  test_query_codebase.py  test_release_node.py  test_resources.py  test_send_message.py  test_update_graph.py
repo-graph/: .indexignore  neo4j_query_table_data_2026-2-7.json  pyproject.toml  schema.example  schema.md
repo-graph/scripts/: extract_graph.py  graph_data.json  viz.html
repo-graph/src/repo_graph/: __main__.py  cli.py
repo-graph/src/repo_graph/indexer/: ast_analyzer.py  filesystem.py
repo-graph/src/repo_graph/models/: __init__.py  ast_nodes.py  nodes.py
repo-graph/src/repo_graph/storage/: neo4j_store.py
repo-graph/src/repo_graph/viz/: app.py  neo4j_queries.py
repo-graph/tests/: test_ast_analyzer.py  test_indexer.py  test_viz.py
ui/: CURRENT_STATE.md  app.py  config.py  requirements.txt
ui/components/: __init__.py  graph.py  sidebar.py
ui/data/: __init__.py  data_provider.py  mock_data.json
ui/tests/: test_config.py  test_data_provider.py
