[project]
name = "brocode"
version = "0.1.0"
description = "BroCode monorepo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "neo4j>=5.0",
    "streamlit>=1.28.0",
    "streamlit-agraph>=0.0.45",
    "streamlit-autorefresh>=1.0.1",
]

[project.scripts]
repo-graph = "repo_graph.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["repo-graph/src"]
include = ["repo_graph*"]
