[project]
name = "repo-graph"
version = "0.1.0"
description = "Index repositories into a Neo4j graph database"
requires-python = ">=3.9"
dependencies = [
    "neo4j>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
repo-graph = "repo_graph.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
